--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
   <div class="row">
     <section class='col-xs-12 col-sm-6 col-md-6'>
       <section>
-        <h2>Deploying code changes</h2>
-          <p>To change this application, update your code and rebuild/redeploy the image.</p>
+        <h2>GOGOGOGGOOGOGOGOGOGo</h2>
+          <p>HELLO WORLD HELLO WORLD HELLO WORLD.</p>
       </section>
     </section>
     <section class="col-xs-12 col-sm-6 col-md-6">
