--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
   <div class="row">
     <section class='col-xs-12 col-sm-6 col-md-6'>
       <section>
-        <h2>GOGOGOGGOOGOGOGOGOGo</h2>
+        <h2>GOGOGOGGOOGOGO5555GOGOGo</h2>
           <p>HELLO WORLD HELLO WORLD HELLO WORLD.</p>
       </section>
     </section>
