--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
   <div class="row">
     <section class='col-xs-12 col-sm-6 col-md-6'>
       <section>
-        <h2>55555</h2>
-          <p>HELLO WORLD HELLO WORLD HELLO WORLD.</p>
+        <h2>Demo Section 1</h2>
+          <p>Thank you.</p>
       </section>
     </section>
     <section class="col-xs-12 col-sm-6 col-md-6">
