--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Welcome to OpenShift</title>
+  <title>OLS - Demo</title>
 
 <style>
 
@@ -214,7 +214,7 @@
   <div class="row">
     <section class='col-xs-12 col-sm-6 col-md-6'>
       <section>
-        <h2>Demo Section 1</h2>
+        <h2>Demo Version 1</h2>
           <p>Thank you.</p>
       </section>
     </section>
