--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
   <div class="row">
     <section class='col-xs-12 col-sm-6 col-md-6'>
       <section>
-        <h2>DStone</h2>
-          <p>DStone</p>
+        <h2>INET Cloud</h2>
+          <p>INET Cloud</p>
       </section>
     </section>
     <section class="col-xs-12 col-sm-6 col-md-6">
